cargo-features = ["named-profiles"]

[workspace]
package.rust-version = "1.74.0"
members = [
    "api",
    "liquidity-bot",
    "liquidity-bot/api",
    "mc-test-utils",
    "p2p",
    "quote-book/api",
    "quote-book/in-memory",
    "quote-book/sqlite",
    "quote-book/synchronized",
    "quote-book/test-suite",
    "server",
    "test-cli",
    "test-server",
]
exclude = [
    "mobilecoin/",
]

[profile.dev]
opt-level = 0
rpath = true

[profile.release]
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false

[profile.mobile]
inherits = "release"
debug = false
lto = true

[profile.mobile-release]
inherits = "mobile"
codegen-units = 1

# Skip the need for LD_LIBRARY_PATH in `cargo test`
[profile.test]
rpath = true

[profile.ci]
# Build config.
inherits = "test"
# Enable some compiler optimizations.
opt-level = 2
# LLVM's Link-Time Optimization: Some, relatively quick to generate.
lto = "thin"

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }
